<resources>
    <string name="app_name">Moviee2</string>
    <string name="ok">OK</string>
    <string name="popular_movies">Popular_Movies</string>
    <string name="toprated_movies">TopRated_Movies</string>
    <string name="movieimage">movieimages</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="textview">TextView</string>
    <string name="poster_image">poster image</string>
    <string name="favorites">Favorites</string>
    <string name="trailers">Trailers :</string>
    <string name="reviews">Reviews :</string>
    <string name="title">TITLE :</string>
    <string name="release_date">RELEASE DATE :</string>
    <string name="overview">OVERVIEW :</string>
    <string name="vote_average">VOTE AVERAGE :</string>
</resources>
